--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">alexmitan.GitHub.io</h1>
+      <h1 class="title">Alex Mitan @ Github.com</h1>
     </header>
     <div id="container">
       <p class="tagline"></p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
-          <a href="https://github.com/AlexMitan" class="code">View alexmitan.GitHub.io on GitHub</a>
+          <a href="https://github.com/AlexMitan" class="code">View my profile and projects on GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
